appId: host.exp.exponent
---
- assertVisible: "Mis movimientos"
- tapOn: "Tarjetas"
- assertVisible: "Agregar tarjeta"