appId: host.exp.exponent
---

- tapOn: "Tarjetas"
- assertVisible: "No tienes tarjetas asignadas a tu cuenta."

- tapOn: "Agregar tarjeta"
- assertVisible: "Titular de la tarjeta"

- tapOn: "Ej: Juan Perez"
- inputText: "Agus Canteros"
- hideKeyboard

- tapOn: "0000 0000 0000 0000"
- inputText: "4500123412345678"
- hideKeyboard

- tapOn: "MM/AA"
- inputText: "1229"
- hideKeyboard

- tapOn: "123"
- inputText: "852"
- hideKeyboard

- tapOn: "Vincular Tarjeta"

- assertVisible: "Agus Canteros"
- assertVisible: "Vence 1229"
# Maestro usa Regex por defecto, esto busca los últimos 4 dígitos:
- assertVisible: ".*5678"